# QZeitgeist5

./: CMakeLists.txt  Mainpage.dox  QZeitgeist.pc.in  QZeitgeistConfig.cmake.in  README
cmake/modules/: QZeitgeistMacros.cmake
debian/: changelog  control  files  libqzeitgeist5-dev.dirs
debian/libqzeitgeist5-dev/DEBIAN/: control  md5sums
debian/libqzeitgeist5-dev/usr/include/QZeitgeist5/: interpretation.h  manifestation.h
debian/libqzeitgeist5-dev/usr/lib/pkgconfig/: QZeitgeist5.pc
debian/libqzeitgeist5-dev/usr/share/doc/libqzeitgeist5-dev/: copyright
debian/libqzeitgeist5/DEBIAN/: control  md5sums
debian/tmp/usr/include/QZeitgeist5/: logbrowser.h  qzeitgeist_version.h
debian/tmp/usr/lib/: libqzeitgeist5.so.1
debian/tmp/usr/lib/cmake/QZeitgeist5/: QZeitgeistConfig.cmake  QZeitgeistConfigVersion.cmake  QZeitgeistExport-none.cmake  QZeitgeistExport.cmake
declarative/: CMakeLists.txt  declarativelogmodel.cpp  declarativelogmodel.h  plugin.h
demos/: CMakeLists.txt
demos/browser/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
demos/simple-list/: CMakeLists.txt  main.cpp
doc/: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt  logbrowser.cpp  logmodel.cpp  logmodel.h
src/DataModel/: datasource.cpp  event.cpp  subject.h  timerange.cpp
tests/datasourceregistry/: CMakeLists.txt
tests/log/: CMakeLists.txt  test-log.h
